<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_breeds">

    <fragment
        android:id="@+id/navigation_breeds"
        android:name="com.android.dogbreedscanner.ui.breeds.BreedsFragment"
        android:label="@string/title_breeds"
        tools:layout="@layout/fragment_breeds">
        <action
            android:id="@+id/action_navigation_breeds_to_breedDetailsFragment"
            app:destination="@id/breedDetailsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.android.dogbreedscanner.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_breedDetailsFragment"
            app:destination="@id/breedDetailsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/breedDetailsFragment"
        android:name="com.android.dogbreedscanner.ui.breedDetails.BreedDetailsFragment"
        android:label="@string/title_breedDetails"
        tools:layout="@layout/fragment_breed_details">
        <argument
            android:name="breedDetails"
            android:defaultValue="@null"
            app:argType="com.android.dogbreedscanner.ui.breedDetails.BreedDetailsData"
            app:nullable="true" />
    </fragment>

</navigation>